# Open-ScoreBoard

./: .gitignore  BUILD_LINUX.md  CHANGELOG.md  CMakeLists.txt  DEVELOPER.md  README.md  Scoreboard.pro  boardw.cpp  boardw.h  boardw.ui  build-linux.sh  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.json  resources.qrc
.github/workflows/: build.yml
assets/: open-scoreboard.desktop
src/: boardw.cpp  boardw.h  boardw.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  thememanager.cpp  thememanager.h
tests/: CMakeLists.txt  test_gamestate.cpp  test_scoringlogic.cpp  test_thememanager.cpp  test_timerlogic.cpp  testutils.cpp  testutils.h
